--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,7 @@
     {% include mathjax.html %}
   {% endif %}
 
+  {% if site.google_analytics %}
+  {% include google_analytics.html %}
+  {% endif %}
 </head>
