Add shortcut icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|Roboto+Condensed:700&subset=latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="{{ site.images }}/x.gif">
 
   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
   <meta property="og:type" content="website">
